# liu_client

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LIU_CLIENT.cbp  Makefile  README.md  cmake_install.cmake  comrades.txt  liu_client  yao
container/: Dockerfile  run.sh  server.py
container/files/: 1_0.deb  bot.ovpn  client.ovpn  libaudit-common_1%3a2.8.2-1ubuntu1_all.deb  libaudit1_1%3a2.8.2-1ubuntu1_amd64.deb  libgcrypt20_1.8.1-4ubuntu1.1_amd64.deb  libpam0g_1.1.8-3.6ubuntu2.18.04.1_amd64.deb  libsystemd0_237-3ubuntu10.25_amd64.deb  libxtables12_1.6.1-2ubuntu2_amd64.deb  liu_client  openvpn  openvpn_2.4.4-2ubuntu1.3_amd64.deb  start.sh
docs/: requesitos.md
include/: core.h  encrypt.h  hydrogen.h  keylogger.h  network_active.h  network_def.h  network_reactive.h  network_utils.h  plugin_utils.h  system_utils.h  types.h
include/network/: active.h  kbucket.h  kpeer.h  netcore.h  peer.h  peers.h  reactive.h  request.h  tmp_kpeer.h
plugins/: CMakeLists.txt  Makefile  encrypt.c  keylog.c
plugins_src/: test.c
scripts/: bot@10.8.0.6  cl.sh  cp.sh  run.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake  core.c  encrypt.c  keylogger.c  network_active.c  network_reactive.c  network_utils.c  plugin_utils.c  system_utils.c
src/network/: active.c  encyption.c  kbucket.c  kpeer.c  netcore.c  peer.c  peers.c  reactive.c  request.c  tmp_kpeer.c
tests/: CMakeLists.txt  request_t.c  test_network_active.c  test_network_utils.c  test_peerexchange.c  test_pingpong.c  test_plugins.c  test_system_utils.c  tmp_kpeer_t.c
